--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -44,9 +44,9 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${#temporals.format(product.productCreateTime, 'yy/MM/dd HH:mm')}"></td>
 
-            <td><a th:href="@{|/admin/product/${product.id}/detail|}" th:text="${product.productName}"></a></td>
-            <td><a th:href="@{admin/product/${product.id}/detail}">상세보기</a></td>
-            <td><a th:href="@{admin/product/${product.id}/delete}">삭제</a></td>
+<!--            <td><a th:href="@{|/admin/product/${product.id}/detail|}" th:text="${product.productName}"></a></td>-->
+            <td><a th:href="@{|/admin/product/${product.id}/detail|}">상세보기</a></td>
+            <td><a th:href="@{/admin/product/${product.id}/delete}">삭제</a></td>
 
         </tr>
     </table>
