--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <!--댓글-->
-            <th:block sec:authorize="hasAnyRole('ADMIN','SELLER')">
+            <th:block>
             <style>
                 .hidden {display:none}
             </style>
