--- a/src/main/resources/static/css/member/updateImage.css
+++ b/src/main/resources/static/css/member/updateImage.css
@@ -1,3 +1,34 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+/* 상세 정보 영역 스타일 */
+.updateImage-con {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+}
+/* title */
+.updateImage-con .title {
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #7285d3;
+}
+.updateImage-con .title h1 {
+    font-size: 24px
+}
+/* image */
+#image-preview {
+    max-width: 100px;
+    max-height: 100px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+}
