--- a/src/main/resources/static/css/product/write.css
+++ b/src/main/resources/static/css/product/write.css
@@ -1,6 +1,6 @@
 @import url(/css/common/reset.css);
-/* @import url(/css/common/header.css);
-@import url(/css/common/footer.css); */
+@import url(/css/common/header.css);
+@import url(/css/common/footer.css);
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
 
 *{
@@ -27,7 +27,7 @@
 
 
 /* 공통적으로 사용되는 스타일 */
-.common_inputs {
+.common-input_box {
   box-sizing: border-box;
   height: 75px;
   width: 360px;
@@ -36,7 +36,7 @@
   align-items: center;
   position: relative;
 }
-.productInputs {
+.product_input {
   width: 325px;
   border: 1px solid #dddddd !important;
   font-size: 1rem;
@@ -45,7 +45,7 @@
   border-radius: 8px;
   padding: 16px;
 }
-.productInput-label {
+.product_input_label {
   /* display: inline-block; */
   position: absolute;
   top: 2px;
@@ -57,7 +57,7 @@
   font-weight: bold;
   z-index: 1;
 }
-.productInput-label span {
+.product_input_label span {
   color: #da4841;
   vertical-align: -2px;
 }
@@ -70,28 +70,32 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-wrapper {
+.root {
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 550px 50px 360px 50px 1fr;
-  grid-template-rows: 20px repeat(10, 100px);
+  grid-template-columns: 1fr 615px 15px 460px 50px 1fr;
+  grid-template-rows: 20px repeat(12, 100px);
   position: relative;
+  margin-bottom: -43px;
 }
 
 
 
-.gridWrapper-prev-drop {
-  grid-area: 2 / 2 / 12 / 3;
+.image_section {
+  grid-area: 2 / 2 / 13 / 3;
   position: sticky;
-  top: 20px;
-  height: 675px;
-  padding: 20px 0 20px 0;
+  top: 65px;
+  height: 635px;
+  padding: 20px 20px 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.imagePreviewExpand-wrapper {
+/* .imagePreviewExpand-wrapper {
   display: flex;
   justify-content: center;
-}
-.imagePreviewExpand-box{
+} */
+.image-expand_area{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,7 +110,7 @@ input::placeholder, textarea::placeholder {
   height: 500px;
   object-fit: cover;
 }
-.imagePreviewExpand-alt{
+.image-expand__img-alt{
   width: 200px;
   height: 200px;
   filter: 
@@ -119,16 +123,19 @@ input::placeholder, textarea::placeholder {
 }
 
 
-
-.imageDrop-wrapper {
-  /* position: relative;
-  top: 30px; */
-  margin: 20px 0 20px 0;
+.division_section {
+  grid-area: 1 / 3 / 14 / 4;
+  box-shadow: -10px 0px 10px -5px #f1f1f1;
 }
-.image-container {
+
+
+/* .imageDrop-wrapper {
+  margin: 20px 0 20px 0;
+} */
+.image-preview_area {
   margin: 0 auto;
   margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   width: 520px;
   min-height: 104px;
   border: 1px dashed #dddddd;
@@ -142,19 +149,19 @@ input::placeholder, textarea::placeholder {
   position: relative;
   z-index: 0;
 }
-.image-dropbox-description-box{
+.image-upload-instruction_box{
   position: absolute;
   z-index: 1;
   width: inherit;
 }
-.image-dropbox-description{
+.image-upload-instruction_text{
   position: relative;
   top: 72px;
   font-size: 10px; /* 텍스트 크기 설정 */
   font-weight: normal;
   color: #8c8c8c;
 }
-.image-preview-box-container{
+.image-preview_ul{
   width: 520px;
   min-height: 104px;
   display: flex;
@@ -206,7 +213,7 @@ input::placeholder, textarea::placeholder {
 
 
 /* category와 brand에서 공통적으로 사용되는 autocomplete 스타일 */
-#category-autocomplete-div, #brand-autocomplete-div {
+#autocomplete_div__category, #autocomplete_div__brand {
   position: absolute;
   top: 64px;  
   width: 357px;
@@ -215,7 +222,7 @@ input::placeholder, textarea::placeholder {
   background-color: #ffffff;
   z-index: 2;
 }
-#category-autocomplete-text-ul, #brand-autocomplete-text-ul {
+#autocomplete_ul__category, #autocomplete_ul__brand {
   padding: 10px;
 }
 .autocomplete-text-li {
@@ -233,11 +240,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productCategoryName {
+.category_area {
   grid-area: 2 / 4 / 3 / 5;
   margin: auto;
 }
-.productCategoryName-hole {
+.product_input_hole__category {
   position: absolute;
   height: 3px;
   width: 82px;
@@ -249,11 +256,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productBrandName {
+.brand_area {
   grid-area: 3 / 4 / 4 / 5;
   margin: auto;
 }
-.productBrandName-hole {
+.product_input_hole__brand {
   position: absolute;
   height: 3px;
   width: 70px;
@@ -265,11 +272,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productName {
+.product-name_area {
   grid-area: 4 / 4 / 5 / 5;
   margin: auto;
 }
-.productName-hole {
+.product_input_hole__product-name {
   position: absolute;
   height: 3px;
   width: 59px;
@@ -281,11 +288,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productColor {
+.color_area {
   grid-area: 5 / 4 / 6 / 5;
   margin: auto;
 }
-.productColorInputs {
+.color-input_box {
   position: relative;
   width: 300px;
   height: 75px;
@@ -293,10 +300,10 @@ input::placeholder, textarea::placeholder {
   justify-content: space-between;
   align-items: center;
 }
-.productColorInputs input[type=radio]{
+.color-input_box input[type=radio]{
   display: none;
 }
-.productColorInputs input[type=radio]+label{
+.color-input_box input[type=radio]+label{
   display: inline-block;
   cursor: pointer;
   width: 20px;
@@ -307,7 +314,7 @@ input::placeholder, textarea::placeholder {
   position: inherit;
   top: 8px;
 }
-.productColorInputs input[type=radio]:checked+label{
+.color-input_box input[type=radio]:checked+label{
   display: inline-block;
   cursor: pointer;
   width: 20px;
@@ -322,7 +329,7 @@ input::placeholder, textarea::placeholder {
   background-repeat: no-repeat;
   background-size: 70%;
 }
-.productColorInputs input[type=radio]:checked+.--white{
+.color-input_box input[type=radio]:checked+.--white{
   display: inline-block;
   cursor: pointer;
   width: 20px;
@@ -335,7 +342,7 @@ input::placeholder, textarea::placeholder {
   background-repeat: no-repeat;
   background-size: 70%;
 }
-.colorRadioBtn{
+.color_radio-btn_label{
   box-shadow: 0px 0px 3px 0px #b1b1b1;
 }
 .--black{
@@ -346,7 +353,7 @@ input::placeholder, textarea::placeholder {
 }
 .--pink{
   background-color: #E97777;
-}-ho
+}
 .--orange{
   background-color: #EC8F6A;
 }
@@ -371,11 +378,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productSize {
+.size_area {
   grid-area: 6 / 4 / 7 / 5;
   margin: auto;
 }
-.productSize-hole {
+.product_input_hole__size {
   position: absolute;
   height: 3px;
   width: 83px;
@@ -387,11 +394,11 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productPrice {
+.price_area {
   grid-area: 7 / 4 / 8 / 5;
   margin: auto;
 }
-.productPrice-hole {
+.product_input_hole__price {
   position: absolute;
   height: 3px;
   width: 71px;
@@ -403,18 +410,42 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productDisplay {
+.stock_area {
   grid-area: 8 / 4 / 9 / 5;
   margin: auto;
 }
-.productDisplayInputs input[type=radio]{
+.product_input_hole__stock {
+  position: absolute;
+  height: 3px;
+  width: 71px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.display_area {
+  grid-area: 9 / 4 / 10 / 5;
+  margin: auto;
+}
+.display-input_box {
+  position: relative;
+  width: 300px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.display-input_box input[type=radio]{
   display: none;
 }
-.productDisplayInputs input[type=radio]+label{
+.display-input_box input[type=radio]+label{
   background-color: #ffffff;
   color: #888;
 }
-.productDisplayInputs input[type=radio]:checked+label{
+.display-input_box input[type=radio]:checked+label{
   background-color: #7286d3;
   color: #ffffff;
 }
@@ -447,21 +478,21 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productDescription {
-  grid-area: 9 / 4 / 12 / 5;
+.description_area {
+  grid-area: 10 / 4 / 13 / 5;
   margin: auto;
 }
-.productDescriptionInputs {
-  /* display: flex;
+.description-input_box {
+  display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 360px; */
-  height: 297px;
+  width: 360px;
+  height: 300px;
 }
-.productDescriptionInputs textarea {
+.description-input_box textarea {
   width: 325px;
-  height: 245px;
+  height: 247px;
   resize: none;
   border: 1px solid #dddddd !important;
   font-size: 1rem;
@@ -470,23 +501,7 @@ input::placeholder, textarea::placeholder {
   border-radius: 8px;
   padding: 16px;
 }
-.productInput-label2 {
-  /* display: inline-block; */
-  position: absolute;
-  top: -7px;
-  left: 12px;
-  /* padding: 8px; */
-  /* background: white; */
-  font-size: 14px;
-  color: #888;
-  font-weight: bold;
-  z-index: 1;
-}
-.productInput-label2 span {
-  color: #da4841;
-  vertical-align: -1px;
-}
-.productDescription-hole {
+.product_input_hole__description {
   position: absolute;
   height: 3px;
   width: 71px;
@@ -498,120 +513,37 @@ input::placeholder, textarea::placeholder {
 
 
 
-.grid-productSubmit {
-  grid-area: 12 / 4 / 13 / 5;
+.submit_area {
+  grid-area: 13 / 4 / 14 / 5;
   margin: auto;
 }
-.productSubmitBtn{
+.submit-input_box{
   height: 75px;
   width: 360px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
-.productSubmit{
+.submit_input{
   cursor: pointer;
   display: none;
 }
-.productSubmit-label {
+.submit_input_label {
   display: inline-block;
   cursor: pointer;
-  width: 200px;
+  width: 360px;
   height: 34px;
   background-color: #7286d3;
   text-align: center; /* 텍스트 중앙 정렬 */
   line-height: 32px; /* 텍스트 수직 중앙 정렬 */
   position: relative;
-  top: 8px;
+  top: 13px;
   border-radius: 8px 8px 8px 8px;
   box-shadow: 0px 0px 3px 0px #b1b1b1;
   color: #ffffff;
   font-size: 14px;
   font-weight:bold;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .add-image-box {
-  background-color: #949494;
-  color: #ffffff;
-
-  width: 100px;
-  height: 100px;
-  margin: 2px;
-  
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  font-size: 10px; 
-} */
-
-/* .add-image-box-ref {
-  width: 100px;
-  height: 100px;
-  margin: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
-/* li img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-} */
-
-/* li .delete-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* input[type="radio"] {
-  margin-left: 2px;
-  margin-right: 25px;
-} */
-
-
-
 
 
 
