--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -1,147 +1,148 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<!-- 송원철 -->
-
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Detail</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
-    <script th:src="@{/js/review/review.js}" defer></script>
+  <meta charset="UTF-8">
+  <title>write</title>
+  <link rel="stylesheet" th:href="@{/css/product/detail.css}">
+  <script th:src="@{/js/product/detail.js}"></script>
+  <script th:src="@{/js/review/review.js}" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-
 <body>
-    <th:block th:each="img : ${productImages}">
-        <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="100" />
-    </th:block>
-    <!-- 송원철 -->
-    <form class="wishListForm1" sec:authorize="hasAnyRole('MEMBER', 'SEMIMEMBER', 'SELLER', 'ADMIN')">
-        <a class="btn btn-outline-dark"
-            th:href="@{(${member != null} ? '/cart/member/' + ${member.getMemberId()} : '/cart/semiMember/' + ${#authentication.principal.semiMemberEntity.semiMemberId})}">
-            <i class="bi-cart-fill me-1"></i>
-            Cart
-            <span class="badge bg-dark text-white ms-1 rounded-pill" th:text="${cartCount}">0</span>
-        </a>
-    </form>
-    <!----------->
-    <table>
-        <tr>
-            <th>상품아이디</th>
-            <td th:text="${product.id}"></td>
-        </tr>
-        <tr>
-            <th>날짜</th>
-            <td th:text="${product.productCreateTime}"></td>
-        </tr>
-        <tr>
-            <th>조회수</th>
-            <td th:text="${product.productHits}"></td>
-        </tr>
-        <tr>
-            <th>상품명</th>
-            <td th:text="${product.productName}"></td>
-        </tr>
-        <tr>
-            <th>상품색상</th>
-            <td th:text="${product.productColor}"></td>
-        </tr>
-        <tr>
-            <th>상품사이즈</th>
-            <td th:text="${product.productSize}"></td>
-        </tr>
-        <tr>
-            <th>설명</th>
-            <td th:text="${product.productDescription}"></td>
-        </tr>
-        <tr>
-            <th>상품작성자</th>
-            <td th:text="${product.memberNickName}"></td>
-        </tr>
-        <tr>
-            <th>상품가격</th>
-            <td th:text="${product.productPrice}"></td>
-        </tr>
-    </table>
-    <!-- 송원철 -->
-    </script>
-    <form class="wishListForm2" sec:authorize="hasAnyRole('MEMBER', 'SEMIMEMBER', 'SELLER', 'ADMIN')"
-        onsubmit="return addProduct();"
-        th:action="@{(${member != null} ? '/cart/member/' + ${member.getMemberId()} + '/' + ${product.id} : '/cart/semiMember/' + ${#authentication.principal.semiMemberEntity.semiMemberId} + '/' + ${product.id})}"
-        method="post">
-        <input class="form-control text-center me-3" id="amount" name="amount" type="num" value="1"
-            style="max-width: 3rem" />
-        <button class="btn btn-outline-dark flex-shrink-0" id="wish" type="submit"><i class="bi-cart-fill me-1"></i>장바구니
-        </button>
-    </form>
-    <script th:inline="javascript">
-        /* <![CDATA[ */
-        const button = document.getElementById("wish")
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
+<div class="container">
+  <!-- 박상재 -->
+  <div class="root">
 
-        function addProduct() {
-            var count = document.getElementById("amount").value
-            if (isNaN(count)) {
-                alert("숫자를 입력해주세요.")
-                return false
-            } else {
-                return true
-            }
-        }
-    </script>
-    <form class="abc" sec:authorize="!isAuthenticated()">
-        <div class="d-flex">
-            <!--        <a th:href="@{/login}">-->
-            <!--            <button class="btn btn-outline-dark flex-shrink-0" type="button">-->
-            <!--                구매하기-->
-            <!--            </button>-->
-            <!--        </a>-->
-            <a class="btn btn-outline-dark" th:href="@{/login}">
-                <i class="bi-cart-fill me-1"></i>
-                장바구니
-            </a>
+
+    <div class="image_section">
+
+        <div class="image-expand_area" id="imagePreviewExpand-box">
+          <img src="/images/product/iconmonstr-photo-camera-13.svg" alt="미리보기 화면" class="image-expand__img-alt" id="imagePreviewExpand">
         </div>
-    </form>
-    <!---------------->
-    <button onclick="listReq()">목록</button>
-    <button onclick="updateReq()">수정</button>
-    <button onclick="deleteReq()">삭제</button>
-    <div class="reply-con">
-        <div class="reply-write">
+
+        <div class="image-preview_area" id="image-container">
+          <ul class="image-preview_ul" id="image-preview-box-container">
+            <th:block th:each="img : ${productImages}">
+              <li class="image-preview_box">
+                <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="100" class="image-preview_img"/>
+              </li>
+            </th:block>
+          </ul>
+        </div>
+
+    </div>
+
+    <div class="division_section"></div>
+
+    <div class="product-info_section">
+
+      <div class="product-id_box">
+        <p class="product-id_text">상품번호: <span th:if="${product.id != null}" th:text="${product.id}" class="product-id_text"></span></p>
+      </div>
+
+      <div class="brand_box">
+        <span th:if="${product.productBrand != null}" th:text="${product.productBrand.productBrandName}" class="brand_text"></span>
+      </div>
+
+      <div class="product-name_box">
+        <span th:if="${product.productName != null}" th:text="${product.productName}" class="product-name_text"></span>
+      </div>
+
+      <div class="product-info-detail_area">
+
+        <div class="description_box">
+          <p th:if="${product.productDescription != null}" th:text="${product.productDescription}" class="description-result_text"></p>
+        </div>
+
+        <div class="category_box">
+          <p class="category_text">카테고리</p>
+          <span th:if="${product.productCategory != null}" th:text="${product.productCategory.productCategoryName}" class="category-result_text"></span>
+        </div>
+
+        <div class="color_box">
+          <p class="color_text">색상</p>
+          <span th:if="${product.productColor != null}" th:text="${product.productColor}" class="color-result_text"></span>
+        </div>
+
+        <div class="size_box">
+          <p class="size_text">사이즈</p>
+          <span th:if="${product.productSize != null}" th:text="${product.productSize}" class="size-result_text"></span>
+        </div>
+
+        <div class="price-stock-quantity_box">
+          <div class="quantity-stock_contents">
+            <img src="/images/product/iconmonstr-minus-square-filled.svg" alt="minus" class="minus_img" id="minus-button">
+            <div class="quantity-result_text-num" id="quantity">
+              1
+            </div>
+            <img src="/images/product/iconmonstr-plus-square-filled.svg" alt="plus" class="plus_img" id="plus-button">
+            <p class="stock-result_text">남은 재고수량 :</p>
+            <span th:if="${product.productStock != null}" th:text="${product.productStock}" class="stock-result_text"></span>
+          </div>
+          <!-- <div class="stock_contents">
+          </div> -->
+          <span th:if="${product.productPrice != null}" th:text="${product.productPrice}" class="price-result_text"></span>
+        </div>
+
+        <a href="" class="purchase_link">
+          <div class="purchase_btn">
+            <span class="purchase_text">구매하기</span>
+          </div>
+        </a>
+
+        <a href="" class="cart_link">
+          <div class="cart_btn">
+            <span class="cart_text">장바구니 추가</span>
+          </div>
+        </a>
+        <!-- =============================================== -->
+        <div class="reply-con">
+          <div class="reply-write">
             <form id="replyForm" sec:authorize="isAuthenticated()">
-                <input type="hidden" readonly name="productId" th:value="${product.id}" id="productId">
-                <ul>
-                    <li>
-                        <textarea name="review" id="review" cols="30" rows="1" placeholder="내용작성"></textarea>
-                    </li>
-                    <li class="Btn">
-                        <input type="button" value="답글작성" id="reviewBtn">
-                    </li>
-                </ul>
+              <input type="hidden" readonly name="productId" th:value="${product.id}" id="productId">
+              <ul>
+                <li>
+                  <textarea name="review" id="review" cols="30" rows="1" placeholder="내용작성"></textarea>
+                </li>
+                <li class="Btn">
+                  <input type="button" value="답글작성" id="reviewBtn">
+                </li>
+              </ul>
             </form>
-        </div>
-        <div class="reviewList">
+          </div>
+          <div class="reviewList">
             <div id="reviewCon" class="reviewCon">
 
             </div>
+          </div>
         </div>
+        <!-- =============================================== -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </div>
     </div>
+  </div>
+
+</div>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </body>
-<script th:inline="javascript">
-    const listReq = () => {
-        console.log("글목록");
-        location.href = "/product/list";
-    }
-    const updateReq = () => {
-        console.log("수정");
-        const id = [[${ product.id }]];
-        location.href = "/product/update/" + id;
-    }
-    const deleteReq = () => {
-        console.log("삭제");
-        const id = [[${ product.id }]];
-        location.href = "/product/delete/" + id;
-    }
-
-
-</script>
-
 </html>
