--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,128 +1,153 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>List</title>
-  <link rel="stylesheet" th:href="@{/css/product/list.css}">
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/product/list.css}">
+    <script th:src="@{/js/product/list.js}"></script>
 </head>
 <body>
-<table class="product">
-  <tr>
-    <th class="table_id">번호</th>
-    <th class="table_img">썸네일</th>
-    <th class="table_title">제목</th>
-    <th class="table_writer">작성자</th>
-    <th class="table_date">날짜</th>
-    <th class="table_hits">조회수</th>
-  </tr>
-  <!-- each -> 반복문 -->
-  <!-- product -> 변수같은 개념 -->
-  <tr th:each="product, stat: ${productList}" >
-    <td th:text="${product.id}"></td>
-    <td><img th:src="@{/images/{filename}(filename=${productImages[stat.index].productImgSavedName})}" alt="" height="50"/></td>
-    <td><a th:href="@{|/product/${product.id}|}" th:text="${product.productName}"></a></td>
-    <td th:text="${product.memberNickName}"></td>
-    <td th:text="${#temporals.format(product.productCreateTime, 'yy/MM/dd HH:mm')}"></td>
-    <td th:text="${product.productHits}"></td>
-  </tr>
-</table>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 
-<!-- 검색창 -->
-<div class="searchBar_wrap">
-  <form th:action="@{/product/list}" method="get" class="searchBar">
-    <select th:name="searchType">
-      <option th:value="productNameContains">상품명</option>
-      <option th:value="productDescriptionContains">상품설명</option>
-    </select>
-    <input type="text" th:name="searchKeyword">
-    <button type="submit">검색</button>
-  </form>
-</div>
+<script th:inline="javascript">
+    let lastProductId = [[${lastProductId_from_server}]];
+</script>
 
-<div class="pagination_wrap">
-  <div class="pagination">
-    <!-- 만약 searchKeyword(검색어) 값이 없다면 ->  주소/product/list?page=2 -->
-    <div class="pagination_noKeyword" th:if="${searchKeyword == null}">
+<div class="container" id="container">
+    <div class="menu-bar">
 
-      <!-- 첫번째 페이지로 이동 -->
-      <th:block class="toFirstPage">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}" th:href="@{/product/list(page=1)}">first</a>
-      </th:block>
+        <div class="productSearchText">
+            Search
+        </div>
+        <div class="productSearchInput">
+            <input type="text" placeholder="상품명을 입력하세요" class="searchKeyword" id="searchKeyword">
+            <!-- <label for="searchKeyword" class="searchKeyword-label"><span>* </span>상품검색</label>
+            <div class="inputBorder-hole"></div> -->
+            <button id="searchButton" class="searchButton"></button>
+        </div>
 
-      <!-- 좌측 10페이지 씩 이동 -->
-      <th:block class="toPrev10Page">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}"
-           th:if="${nowPage > 10}" th:href="@{/product/list(page=${nowPage-10})}"><<</a>
-      </th:block>
-      <th:block class="toPrev10Page">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}"
-           th:if="${nowPage <= 10}" th:href="@{/product/list(page=1)}"><<</a>
-      </th:block>
+        <form id="filters">
+            <!-- 카테고리 -->
+            <div class="productCategoryText">
+                Categories
+            </div>
+            <div class="productCategorySelector">
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn1" value="모자">
+                    <span class="categoryNames">모자</span>
+                    <label for="categoryCheckBtn1" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn2" value="상의">
+                    <span class="categoryNames">상의</span>
+                    <label for="categoryCheckBtn2" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn3" value="하의">
+                    <span class="categoryNames">하의</span>
+                    <label for="categoryCheckBtn3" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn4" value="신발">
+                    <span class="categoryNames">신발</span>
+                    <label for="categoryCheckBtn4" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn5" value="아우터">
+                    <span class="categoryNames">아우터</span>
+                    <label for="categoryCheckBtn5" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn6" value="패션잡화">
+                    <span class="categoryNames">패션잡화</span>
+                    <label for="categoryCheckBtn6" class="categoryCheckBtn"></label>
+                </div>
+                <div class="categoryNames-con">
+                    <input type="checkbox" name="categories" id="categoryCheckBtn7" value="가방">
+                    <span class="categoryNames">가방</span>
+                    <label for="categoryCheckBtn7" class="categoryCheckBtn"></label>
+                </div>
+            </div>
+            <!-- 브랜드 -->
+            <div class="productBrandText">
+                Brands
+            </div>
+            <div class="productBrandSelector">
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn1" value="Nike">
+                    <span class="brandNames">Nike</span>
+                    <label for="brandCheckBtn1" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn2" value="Adidas">
+                    <span class="brandNames">Adidas</span>
+                    <label for="brandCheckBtn2" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn3" value="New Balance">
+                    <span class="brandNames">New Balance</span>
+                    <label for="brandCheckBtn3" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn4" value="Puma">
+                    <span class="brandNames">Puma</span>
+                    <label for="brandCheckBtn4" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn5" value="Converse">
+                    <span class="brandNames">Converse</span>
+                    <label for="brandCheckBtn5" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn6" value="Vans">
+                    <span class="brandNames">Vans</span>
+                    <label for="brandCheckBtn6" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn7" value="Fila">
+                    <span class="brandNames">Fila</span>
+                    <label for="brandCheckBtn7" class="brandCheckBtn"></label>
+                </div>
+                <div class="brandNames-con">
+                    <input type="checkbox" name="brands" id="brandCheckBtn8" value="Asics">
+                    <span class="brandNames">Asics</span>
+                    <label for="brandCheckBtn8" class="brandCheckBtn"></label>
+                </div>
+            </div>
+            <!-- 색상 -->
+            <div class="productColorText">
+                Colors
+            </div>
+            <div class="productColorSelector" id="productColor">
+                <input type="checkbox" name="colors" id="colorCheckBtn1"  value="black">
+                <label for="colorCheckBtn1" class="colorCheckBtn --black"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn2"  value="red">
+                <label for="colorCheckBtn2" class="colorCheckBtn --red"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn3"  value="pink">
+                <label for="colorCheckBtn3" class="colorCheckBtn --pink"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn4"  value="orange">
+                <label for="colorCheckBtn4" class="colorCheckBtn --orange"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn5"  value="yellow">
+                <label for="colorCheckBtn5" class="colorCheckBtn --yellow"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn6"  value="green">
+                <label for="colorCheckBtn6" class="colorCheckBtn --green"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn7"  value="skyblue">
+                <label for="colorCheckBtn7" class="colorCheckBtn --skyblue"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn8"  value="navy">
+                <label for="colorCheckBtn8" class="colorCheckBtn --navy"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn9"  value="purple">
+                <label for="colorCheckBtn9" class="colorCheckBtn --purple"></label>
+                <input type="checkbox" name="colors" id="colorCheckBtn10"  value="white">
+                <label for="colorCheckBtn10" class="colorCheckBtn --white"></label>
+            </div>
 
-      <!-- 페이징 처리 -->
-      <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
-        <a th:if="${page != nowPage}" th:href="@{/product/list(page=${page})}" th:text="${page}"></a>
-        <strong th:if="${page == nowPage}" th:text="${page}"></strong>
-      </th:block>
+        </form>
 
-      <!-- 우측 10페이지 씩 이동 -->
-      <th:block class="toNext10Page">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}"
-           th:if="${nowPage > (totalPage - 10)}" th:href="@{/product/list(page=${totalPage})}">>></a>
-      </th:block>
-      <th:block class="toNext10Page">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}"
-           th:if="${nowPage < (totalPage - 10)}" th:href="@{/product/list(page=${nowPage+10})}">>></a>
-      </th:block>
-
-      <!-- 마지막 페이지로 이동 -->
-      <th:block class="toLastPage">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}" th:href="@{/product/list(page=${totalPage})}">last</a>
-      </th:block>
     </div>
-
-    <!-- 만약 searchKeyword(검색어) 값이 있다면 ->  주소/product/list?searchType=검색타입&searchKeyword=검색어 -->
-    <div class="pagination_yesKeyword" th:if="${searchKeyword != null}">
-
-      <!-- 첫번째 페이지로 이동 -->
-      <th:block class="toFirstPage">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}" th:href="@{/product/list(page=1), searchType=${searchType}, searchKeyword = ${searchKeyword}}">first</a>
-      </th:block>
-
-      <!-- 좌측 10페이지 씩 이동 -->
-      <th:block class="toPrev10Page">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}"
-           th:if="${nowPage > 10}" th:href="@{/product/list(page=${nowPage-10}, searchType=${searchType}, searchKeyword = ${searchKeyword})}"><<</a>
-      </th:block>
-      <th:block class="toPrev10Page">
-        <a th:class="${nowPage == 1 ? 'invisible' : null}"
-           th:if="${nowPage <= 10}" th:href="@{/product/list(page=1, searchType=${searchType}, searchKeyword = ${searchKeyword})}"><<</a>
-      </th:block>
-
-      <!-- 페이징 처리 -->
-      <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
-        <a th:if="${page != nowPage}" th:href="@{/product/list(page=${page}, searchType=${searchType}, searchKeyword = ${searchKeyword})}" th:text="${page}"></a>
-        <strong th:if="${page == nowPage}" th:text="${page}"></strong>
-      </th:block>
-
-      <!-- 우측 10페이지 씩 이동 -->
-      <th:block class="toNext10Page">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}"
-           th:if="${nowPage > (totalPage - 10)}" th:href="@{/product/list(page=${totalPage}, searchType=${searchType}, searchKeyword = ${searchKeyword})}">>></a>
-      </th:block>
-      <th:block class="toNext10Page">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}"
-           th:if="${nowPage < (totalPage - 10)}" th:href="@{/product/list(page=${nowPage+10}, searchType=${searchType}, searchKeyword = ${searchKeyword})}">>></a>
-      </th:block>
-
-      <!-- 마지막 페이지로 이동 -->
-      <th:block class="toLastPage">
-        <a th:class="${nowPage == endPage ? 'invisible' : null}" th:href="@{/product/list(page=${totalPage}, searchType=${searchType}, searchKeyword = ${searchKeyword})}">last</a>
-      </th:block>
+    <div class="product-list-container" id="product-list-container">
+        <div class="product-list" id="product-list"></div>
     </div>
-  </div>
 </div>
-
-
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </body>
 </html>
