--- a/src/main/resources/templates/chatbot/chat.html
+++ b/src/main/resources/templates/chatbot/chat.html
@@ -7,9 +7,11 @@
 
     <title>챗봇!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
+    <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
     <script th:src="@{/js/chatbot/chat.js}" type="text/javascript" defer="defer"></script>
 </head>
-<body><h1>test</h1>
+<body>
 <div id="chat">
     <div id="chat-bot">
         <dl id="chat-disp">
