--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -187,7 +187,7 @@ html{
   right: 1.64rem;
   width: 50px;
   height: 50px;
-   background:url("/images/chatbot.png") no-repeat 50%/cover;
+   background:url("/images/chatbot2.png") no-repeat 50%/cover;
    cursor:pointer;
 }
 
