--- a/src/main/resources/static/css/product/detail.css
+++ b/src/main/resources/static/css/product/detail.css
@@ -248,12 +248,28 @@
   box-shadow: 0px 0px 3px 0px #b1b1b1;
   border-radius: 8px;
 }
+/*송원철*/
+.cart_btn1 {
+  height: 44px;
+  width: 420px;
+  background-color: #7286d3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  border-radius: 8px;
+}
 .cart_text {
   font-size: 20px;
   font-weight: bold;
   color: #ffffff;
 }
-
+/*송원철*/
+.cart_text1 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+}
 
 
 
