자잘한 수정

--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -51,7 +51,7 @@
                     </td>
                     <td th:text="${cartItem.getCartItemCount()}">수량</td>
                     <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
-                    <td th:text="${cartItem.getCart().getCreateTime()}">날짜</td>
+                    <td th:text="${#temporals.format(cartItem.getCreateTime(), 'yyyy-MM-dd HH:mm:ss')}">날짜</td>
                     <td class="btn btn-outline-dark"><a
                             th:href="@{/cart/member/{memberId}/{cartItemId}/delete(memberId=${cartItem.getCart().getMember().getMemberId()}, cartItemId=${cartItem.getCartItemId()})}"
                             style="text-decoration: none">삭제</a></td>
