--- a/src/main/resources/templates/fragments/layout/baseLayout.html
+++ b/src/main/resources/templates/fragments/layout/baseLayout.html
@@ -9,10 +9,7 @@
 <th:block layout:fragment="container">
     <!-- 각페이지의 컨텐츠  -->
 </th:block>
-<div class="footer" th:replace="~{fragments/commo
-n/footer :: footerFragment}"></div>
-
-<div class="chat" th:replace="~{fragments/common/chat :: chatFragment}"></div>
+<div class="footer" th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </body>
 
 </html>
