--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -161,6 +161,7 @@
             </form>
           </div>
           <div class="reviewList">
+            <input type="hidden" readonly name="productId" th:value="${product.id}" id="proId">
             <div id="reviewCon" class="reviewCon">
 
             </div>
