--- a/src/main/resources/static/css/product/list.css
+++ b/src/main/resources/static/css/product/list.css
@@ -2,6 +2,8 @@
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
+/*chatbot*/
+@import url(/css/common/chatbot.css);
 
 *{
   margin: 0;
