--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -43,7 +43,7 @@
                 <li>
                     <div class="sec1-title">상품</div>
                     <ul class="sec1-item">
-                        <li>상품 생성</li>
+                        <li> <a th:href="@{/product/write}">상품생성</a></li>
                         <li><a th:href="@{/admin/product/{memberId}/list(memberId=${#authentication.principal.memberEntity.memberId})}">상품 리스트</a></li>
                     </ul>
                 </li>
