--- a/src/main/resources/templates/fragments/layout/baseLayout.html
+++ b/src/main/resources/templates/fragments/layout/baseLayout.html
@@ -3,6 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head th:replace="~{fragments/common/head :: headFragment}"></head>
+
 <body>
 
 <div class="header" th:replace="~{fragments/common/header :: headerFragment}"></div>
@@ -10,6 +11,7 @@
     <!-- 각페이지의 컨텐츠  -->
 </th:block>
 <div class="footer" th:replace="~{fragments/common/footer :: footerFragment}"></div>
+<!--<div class="chatbot" th:replace="~{fragments/common/chatbot :: chatbotFragment}"></div>-->
 </body>
 
 </html>
