--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <!--  chatbot-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>회원가입</title>
     <link rel="stylesheet" th:href="@{/css/join.css}">
+
+    <!--  chatbot-->
+    <script th:src="@{/js/chatbot/chatbot.js}" type="text/javascript" defer="defer"></script>
+
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
@@ -27,6 +36,9 @@
         </div>
     </div>
 </div>
-</body>
+<!--chatbot-->
+<div class="chatbot" >
+</div>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
+</body>
 </html>
