--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -158,7 +158,7 @@
 </div>
 <!--chatbot-->
 <div class="chatbot" >
-</div>gi
+</div>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </body>
 </html>
