--- a/src/main/resources/static/css/common/chatbot.css
+++ b/src/main/resources/static/css/common/chatbot.css
@@ -4,6 +4,6 @@
   right: 1.64rem;
   width: 50px;
   height: 50px;
-   background:url("/images/chatbot.png") no-repeat 50%/cover;
+   background:url("/images/chatbot2.png") no-repeat;
    cursor:pointer;
 }
