--- a/src/main/resources/static/css/member/pagingList.css
+++ b/src/main/resources/static/css/member/pagingList.css
@@ -12,7 +12,7 @@
   min-height:500px;
     padding:20px;
     box-sizing:border-box;
-     background-color:#ebf9f8;
+     /* background-color:#ebf9f8; */
      display:flex;
      flex-direction:column;
      justify-content:space-between;
@@ -29,14 +29,14 @@ table, td ,th{
 }
 
 .pagingList .pagingList-con table thead tr:nth-child(1) th{
-      background-color:#555555;
-      color:#ffffff;
+      /* background-color:#555555; */
+      /* color:#ffffff; */
       font-size:20px;
       padding:10px 0;
 }
 
 .pagingList .pagingList-con table thead tr:nth-child(2) th{
-      background-color:#00a9cc;
+      background-color:#cda9f6;
       color:#ffffff;
       padding:8px 0;
 }
@@ -48,13 +48,13 @@ table, td ,th{
 .pagingList .pagingList-con .paging{
   padding:10px 0;
   box-sizing:border-box;
-     background-color:#ebf9f8;
+     /* background-color:#ebf9f8; */
           display:flex;
           justify-content:center;
 }
 .pagingList .pagingList-con .paging > ul{
   flex-basis:400px;
-  background-color:#cee76b;
+  /* background-color:#cee76b; */
            display:flex;
            justify-content:space-between;
            gap:5px;
@@ -64,7 +64,7 @@ table, td ,th{
 
 .pagingList .pagingList-con .paging > ul> li{
  /* flex:1;*/
-  background-color:##58cc00;
+  /* background-color:#f2a5f6; */
 }
 .pagingList .pagingList-con .paging > ul> li.block{
   flex:1;
@@ -111,7 +111,7 @@ span.now{
   color:#ffffff;
   font-weight:bold;
   border-radius:10px;
-  background-color:#0000ff;
+  background-color:#bb60d6;
   padding:0 10px;
   position:relative;
   cursor:pointer;
