--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -29,7 +29,6 @@
                     <th scope="col">가격</th>
                     <th scope="col">담은날짜</th>
                     <th scope="col">삭제</th>
-                    <th scope="col">결제</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -59,12 +58,15 @@
                 </tbody>
             </table>
         </div>
+        <div class="Btn">
+            <div class="price">
+                총가격 : <span th:text="${totalPrice}">0</span>
+            </div>
             <button class="buttonpa" id="payment-button" th:value="@{/payment/kakao/pg(productId=${product.id}, memberId=${member.memberId}, productPrice=${totalPrice}, productName=${product.productName})}">
                 결제하기
             </button>
-        <div class="price">
-                총가격 : <span th:text="${totalPrice}">총가격</span>
-            </div>
+        </div>
+       
 </th:block>
 
 <!--<a th:href=@{"/payment/kakao/pg?{productId=123&memberId=123&productPrice=100000&productName=testProduct"}></a>-->
