--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,36 +53,24 @@
                             <div id="slideShow">
                                 <ul class="slides">
                                     <li>
-                                        <img src="images/main/mainSilderImg/main-slider-item1.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
-                                    </li>
-                                    <li>
-                                        <img src="images/main/mainSilderImg/main-slider-item2.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
-                                    </li>
-                                    <li>
-                                        <img src="images/main/mainSilderImg/main-slider-item3.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
-                                    </li>
-                                    <li>
                                         <img src="images/main/mainSilderImg/main-slider-item4.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
+                                        <span>Cloth Keeper의 선택은?</span>
                                     </li>
                                     <li>
                                         <img src="images/main/mainSilderImg/main-slider-item5.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
+                                        <span>무통장 입금 할인 EVENT</span>
                                     </li>
                                     <li>
                                         <img src="images/main/mainSilderImg/main-slider-item6.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
+                                        <span>현대카드 10% 적립 EVENT</span>
                                     </li>
                                     <li>
                                         <img src="images/main/mainSilderImg/main-slider-item7.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
+                                        <span>신상입고</span>
                                     </li>
                                     <li>
                                         <img src="images/main/mainSilderImg/main-slider-item8.jpg" alt="no img">
-                                        <span>이벤트 문구 테스트</span>
+                                        <span>신규 브랜드 입점</span>
                                     </li>
                                 </ul>
                                 <p class="controller">
